# mooretech-shortener

./: Cargo.toml  Makefile  README.md  build.rs  mappings.txt
src/: home.html  index.ts  lib.rs  rewrite_map.rs
tests/: integration.ts
