[package]
name = "mooretech-shortener"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1.7"
url = "2.3.1"
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.33"
web-sys = { version = "0.3.60", features = ["Headers", "Request", "RequestInit", "RequestMode", "Response", "ResponseInit"] }

[profile.release]
lto = true
